Working up to 1.0.0 release.

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,3 +1,12 @@
 Listeners:
   PlaceMessage: true
   BreakMessage: true
+
+warps:
+  kaasland:
+    x: 0
+    Y: 1
+    z: 0
+    world: world
+    yaw: 0
+    pitch: 0
